chore/docker: update literal

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -33,6 +33,7 @@
   "give-your-data": "Provide us with the following details and we will send you a link to reset your password.",
   "sent-email": "An email has been sent to",
   "sent-email-success": "You have successfully completed the registration process.",
+  "sent-email-change-pwd": "You have successfully completed the password change process.",
   "take-control": "Start taking control of your income and expenses today",
   "choose-password": "Choose a secure password",
   "not-forget-password": "And most importantly, don't forget it or you'll have to do this all over again!",
