--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -31,8 +31,9 @@
   "about-yourself": "Cuéntanos un poco sobre ti.",
   "forgot-your-password": "¿Olvidaste tu contraseña?",
   "give-your-data": "Facilítanos los siguientes datos y te enviaremos un enlace para restablecer tu contraseña.",
-  "sent-email": "Se ha enviado un email a",
+  "sent-email": "Se ha enviado un email a tu correo",
   "sent-email-success": "Has completado con éxito el proceso de registro.",
+  "sent-email-change-pwd": "Has completado con éxito el proceso de cambio de contraseña",
   "take-control": "Comienza a tomar el control de tus ingresos y gastos hoy mismo.",
   "choose-password": "Elige una contraseña segura.",
   "not-forget-password": "¡Y lo más importante, no la olvides o tendrás que hacer todo esto de nuevo!",
