chore/docker: add link marketing

--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -4,6 +4,7 @@
   "btn-back": "Atrás",
   "btn-next": "Continuar",
   "btn-return": "Volver",
+  "link-marketing": "Descubre cómo podemos ayudarte.",
 
   "input-email-label": "Email",
   "input-email-placeholder": "Introduzca su email",
