--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,6 +4,7 @@
   "btn-back": "Back",
   "btn-next": "Continue",
   "btn-return": "Return",
+  "link-marketing": "Discover how we can help you.",
 
   "input-email-label": "Email",
   "input-email-placeholder": "Enter your email",
