chore/docker: remove reload

--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -113,5 +113,5 @@
   "input-language-label": "Idioma",
   "input-language-placeholder": "Selecciona un idioma",
   "spanish": "Español",
-  "english": "Ingles"
+  "english": "Inglés"
 }
